Add mobile responsive styles and hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,10 +23,25 @@
                 <h1 class="header-title">ACERVO TÊXTIL DIGITAL</h1>
                 <span class="header-subtitle">Biblioteca de Pesquisa</span>
             </div>
-            <nav class="main-nav">
+            <nav class="main-nav" id="mainNav">
                 <a href="sobre.html" class="nav-link" data-i18n="about">Sobre</a>
                 <a href="portfolio.html" class="nav-link" data-i18n="portfolio">Portfólio</a>
                 <a href="contato.html" class="nav-link" data-i18n="contact">Contato</a>
+            </nav>
+            <!-- Mobile Menu Button -->
+            <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Menu">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M3 12h18M3 6h18M3 18h18" />
+                </svg>
+            </button>
+        </div>
+        <!-- Mobile Navigation Overlay -->
+        <div class="mobile-nav-overlay" id="mobileNavOverlay">
+            <nav class="mobile-nav">
+                <a href="index.html" class="mobile-nav-link" data-i18n="home">Início</a>
+                <a href="sobre.html" class="mobile-nav-link" data-i18n="about">Sobre</a>
+                <a href="portfolio.html" class="mobile-nav-link" data-i18n="portfolio">Portfólio</a>
+                <a href="contato.html" class="mobile-nav-link" data-i18n="contact">Contato</a>
             </nav>
         </div>
     </header>
