Update hero: left-aligned layout, black subtitle, blue CTA button

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="GraceXpress - Explore nossa coleção completa de 120 tecidos para moda e confecção.">
     <title>GraceXpress | Coleção de Tecidos</title>
@@ -55,12 +51,12 @@
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="hero-dim-overlay" id="heroDimOverlay"></div>
-        <div class="hero-content">
+        <div class="hero-content hero-content-left">
             <h1 class="hero-brand-title" id="heroBrandTitle">
-                <span class="brand-main">GRACEX</span><span class="brand-slide" id="brandSlide">PRESS</span>
+                <span class="brand-grace">GRACE</span><span class="brand-express">EXPRESS</span>
             </h1>
-            <p class="hero-rotating-text" id="heroRotatingText">Uma jornada sensorial pela essência do vestuário</p>
-            <a href="#collection" class="hero-cta hero-cta-outlined">EXPLORAR O ACERVO</a>
+            <p class="hero-subtitle-black" id="heroRotatingText">ONDE TUDO COMEÇA A COMEÇAR</p>
+            <a href="#collection" class="hero-cta hero-cta-blue">EXPLORA O ACERVO</a>
         </div>
     </section>
 
