Update hero pages, add portfolio admin, navy blue ad-bar, formal fonts

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
         <div class="hero-dim-overlay" id="heroDimOverlay"></div>
-        <div class="hero-content hero-content-left">
+        <div class="hero-content">
             <h1 class="hero-brand-title" id="heroBrandTitle">
-                <span class="brand-grace">GRACE</span><span class="brand-express">EXPRESS</span>
+                <span class="brand-main">GRACEX</span><span class="brand-slide" id="brandSlide">PRESS</span>
             </h1>
-            <p class="hero-subtitle-black" id="heroRotatingText">ONDE TUDO COMEÇA A COMEÇAR</p>
-            <a href="#collection" class="hero-cta hero-cta-blue">EXPLORA O ACERVO</a>
+            <p class="hero-rotating-text" id="heroRotatingText">Uma jornada sensorial pela essência do vestuário</p>
+            <a href="#collection" class="hero-cta hero-cta-outlined">EXPLORAR O ACERVO</a>
         </div>
     </section>
 
