--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
     <script src="translations.js"></script>
     <script src="factories-data.js"></script>
     <script src="fabrics-data.js"></script>
+    <script src="js/services/cloudinary-service.js"></script>
     <script src="media-manager.js"></script>
     <script src="script.js"></script>
 </body>
