--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="header-container">
             <a href="index.html" class="logo logo-elegant">GRACEXPRESS |</a>
             <div class="header-center">
-                <h1 class="header-title">ACERVO TÊXTIL DIGITAL</h1>
-                <span class="header-subtitle">Biblioteca de Pesquisa</span>
+                <h1 class="header-title" data-i18n="headerTitleText">ACERVO TÊXTIL DIGITAL</h1>
+                <span class="header-subtitle" data-i18n="headerSubtitleText">Biblioteca de Pesquisa</span>
             </div>
             <nav class="main-nav" id="mainNav">
                 <a href="sobre.html" class="nav-link" data-i18n="about">Sobre</a>
@@ -56,7 +56,7 @@
                 <span class="brand-main">GRACEX</span><span class="brand-slide" id="brandSlide">PRESS</span>
             </h1>
             <p class="hero-rotating-text" id="heroRotatingText">Uma jornada sensorial pela essência do vestuário</p>
-            <a href="#collection" class="hero-cta hero-cta-outlined">EXPLORAR O ACERVO</a>
+            <a href="#collection" class="hero-cta hero-cta-outlined" data-i18n="heroCta">EXPLORAR O ACERVO</a>
         </div>
     </section>
 
@@ -298,8 +298,10 @@
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                         </svg>
                     </button>
+                    <!-- Admin Link -->
+                    <a href="javascript:void(0)" onclick="openAdminLogin()"
+                        style="color: inherit; opacity: 0.5; font-size: 11px; margin-left: 10px; text-decoration: none; text-transform: uppercase; cursor: pointer;">Admin</a>
                 </div>
-                <!-- Admin Link Removed -->
             </div>
     </footer>
 
@@ -307,30 +309,35 @@
     <div id="adminLoginModal" class="admin-modal">
         <div class="admin-modal-content">
             <span class="admin-close" onclick="closeAdminLogin()">&times;</span>
-            <h3>Acesso Administrativo</h3>
+            <h3 data-i18n="adminTitle">Acesso Administrativo</h3>
             <form id="adminLoginForm" onsubmit="handleAdminLogin(event)">
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="email" id="adminEmail" required placeholder="admin@gracexpress.com">
+                    <label data-i18n="email">Email</label>
+                    <input type="email" id="adminEmail" required placeholder="seu-email@exemplo.com">
                 </div>
                 <div class="form-group">
-                    <label>Senha</label>
-                    <input type="password" id="adminPassword" required placeholder="••••••••">
+                    <label data-i18n="password">Senha</label>
+                    <input type="password" id="adminPassword" required placeholder="Sua senha">
                 </div>
-                <button type="submit" class="admin-btn">Entrar</button>
-                <a href="#" class="admin-forgot" onclick="resetAdminPassword()">Esqueci minha senha</a>
+                <button type="submit" class="admin-btn" data-i18n="enter">Entrar</button>
+                <a href="#" class="admin-forgot" onclick="resetAdminPassword()" data-i18n="forgotPassword">Esqueci minha
+                    senha</a>
             </form>
         </div>
     </div>
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+    <script src="js/supabase-config.js"></script>
+    <script src="js/auth-service.js"></script>
     <script src="translations.js"></script>
     <script src="factories-data.js"></script>
     <script src="fabrics-data.js"></script>
+    <script src="fabrics-data-en.js"></script>
     <script src="js/services/cloudinary-service.js"></script>
-    <script src="media-manager.js"></script>
+    <script src="media-manager.js?v=2"></script>
     <script src="script.js"></script>
 </body>
 
