--- a/portfolio.html
+++ b/portfolio.html
@@ -373,7 +373,7 @@
         </div>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1 class="hero-title-formal">Meu Portfólio</h1>
+            <h1 class="hero-title-formal" data-i18n="portfolioTitle">Meu Portfólio</h1>
         </div>
     </section>
 
@@ -385,12 +385,12 @@
     <div class="portfolio-modal" id="portfolioModal">
         <div class="portfolio-modal-content">
             <div class="portfolio-modal-header">
-                <h3 id="modalTitle">Editar Item</h3>
+                <h3 id="modalTitle" data-i18n="editItem">Editar Item</h3>
                 <button class="portfolio-modal-close" onclick="closePortfolioModal()">×</button>
             </div>
             <div class="portfolio-modal-body">
                 <div class="form-group">
-                    <label>Imagem</label>
+                    <label data-i18n="imageLabel">Imagem</label>
                     <div class="image-preview" id="imagePreview">
                         <span class="image-preview-placeholder">📷</span>
                     </div>
@@ -402,31 +402,32 @@
                             <polyline points="17 8 12 3 7 8" />
                             <line x1="12" y1="3" x2="12" y2="15" />
                         </svg>
-                        Carregar Imagem
+                        <span data-i18n="uploadImage">Carregar Imagem</span>
                     </button>
                 </div>
                 <div class="form-group">
-                    <label>Tipo</label>
+                    <label data-i18n="typeLabel">Tipo</label>
                     <select id="portfolioType">
-                        <option value="photo">Foto</option>
-                        <option value="video">Vídeo</option>
+                        <option value="photo" data-i18n="typePhoto">Foto</option>
+                        <option value="video" data-i18n="typeVideo">Vídeo</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label>Título</label>
+                    <label data-i18n="titleLabel">Título</label>
                     <input type="text" id="portfolioTitle" placeholder="Ex: Coleção Verão 2024">
                 </div>
                 <div class="form-group">
-                    <label>Frase</label>
+                    <label data-i18n="phraseLabel">Frase</label>
                     <input type="text" id="portfolioPhrase" placeholder="Ex: Elegância atemporal">
                 </div>
                 <div class="form-group" id="videoUrlGroup" style="display: none;">
-                    <label>URL do Vídeo (YouTube/Vimeo)</label>
+                    <label data-i18n="videoUrlLabel">URL do Vídeo (YouTube/Vimeo)</label>
                     <input type="text" id="portfolioVideoUrl" placeholder="https://youtube.com/watch?v=...">
                 </div>
                 <div class="modal-actions">
-                    <button class="btn-save" onclick="savePortfolioItem()">Salvar</button>
-                    <button class="btn-delete" id="btnDelete" onclick="deletePortfolioItem()">Excluir</button>
+                    <button class="btn-save" onclick="savePortfolioItem()" data-i18n="saveBtn">Salvar</button>
+                    <button class="btn-delete" id="btnDelete" onclick="deletePortfolioItem()"
+                        data-i18n="deleteBtn">Excluir</button>
                 </div>
             </div>
         </div>
@@ -440,6 +441,26 @@
             <div class="video-player-wrapper" id="videoPlayerWrapper">
                 <!-- YouTube iframe will be inserted here -->
             </div>
+        </div>
+    </div>
+
+    <!-- Admin Login Modal -->
+    <div id="adminLoginModal" class="admin-modal">
+        <div class="admin-modal-content">
+            <span class="admin-close" onclick="closeAdminLogin()">&times;</span>
+            <h3>Acesso Administrativo</h3>
+            <form id="adminLoginForm" onsubmit="handleAdminLogin(event)">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" id="adminEmail" required placeholder="seu-email@exemplo.com">
+                </div>
+                <div class="form-group">
+                    <label>Senha</label>
+                    <input type="password" id="adminPassword" required placeholder="Sua senha">
+                </div>
+                <button type="submit" class="admin-btn">Entrar</button>
+                <a href="#" class="admin-forgot" onclick="resetAdminPassword()">Esqueci minha senha</a>
+            </form>
         </div>
     </div>
 
@@ -536,14 +557,20 @@
                             <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                         </svg>
                     </button>
+                    <!-- Admin Link -->
+                    <a href="javascript:void(0)" onclick="openAdminLogin()"
+                        style="color: inherit; opacity: 0.5; font-size: 11px; margin-left: 10px; text-decoration: none; text-transform: uppercase; cursor: pointer;">Admin</a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+    <script src="js/supabase-config.js"></script>
+    <script src="js/auth-service.js"></script>
     <script src="translations.js"></script>
-    <script src="media-manager.js"></script>
+    <script src="media-manager.js?v=2"></script>
     <script>
         // Theme Toggle
         const themeToggle = document.getElementById('themeToggle');
@@ -604,6 +631,7 @@
         function renderPortfolio() {
             const grid = document.getElementById('portfolioGrid');
             const isAdmin = sessionStorage.getItem('isAdminMode') === 'true';
+            const t = getCurrentTranslations(); // Use global function from translations.js
 
             let html = portfolioItems.map((item, index) => `
                 <article class="portfolio-item ${item.type === 'video' ? 'video' : ''}" onclick="handleItemClick(${index})">
@@ -625,7 +653,7 @@
                         <circle cx="12" cy="12" r="10"/>
                         <path d="M12 8v8M8 12h8"/>
                     </svg>
-                    <span>Adicionar Item</span>
+                    <span data-i18n="addItem">${t.addItem}</span>
                 </div>
             `;
 
@@ -686,8 +714,11 @@
             currentEditIndex = index;
             const item = portfolioItems[index];
 
-            document.getElementById('modalTitle').textContent = 'Editar Item';
+            const t = getCurrentTranslations();
+            document.getElementById('modalTitle').textContent = t.editItem;
+            // Removed: document.getElementById('portfolioType').value = item.type; (This should set value not text content)
             document.getElementById('portfolioType').value = item.type;
+
             document.getElementById('portfolioTitle').value = item.title;
             document.getElementById('portfolioPhrase').value = item.phrase;
             document.getElementById('portfolioVideoUrl').value = item.videoUrl || '';
@@ -714,7 +745,9 @@
             currentEditIndex = null;
             currentImageData = null;
 
-            document.getElementById('modalTitle').textContent = 'Adicionar Item';
+            const t = getCurrentTranslations();
+            document.getElementById('modalTitle').textContent = t.addItem;
+
             document.getElementById('portfolioType').value = 'photo';
             document.getElementById('portfolioTitle').value = '';
             document.getElementById('portfolioPhrase').value = '';
