--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             </button>
             <span class="search-count" id="searchCount">120 tecidos</span>
         </div>
+        <!-- Mobile Filter Toggle Button -->
+        <button class="mobile-filter-btn" id="mobileFilterBtn" aria-label="Filtros">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+            </svg>
+            <span data-i18n="filterBtn">Filtros</span>
+        </button>
     </div>
 
     <!-- Main Content -->
