--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, viewport-fit=cover">
     <title>Contato | GraceXpress</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Reset for Android */
+        html,
+        body {
+            width: 100%;
+            max-width: 100vw;
+            overflow-x: hidden;
+        }
+
         .contact-page-wrapper {
             min-height: calc(100vh - var(--header-height));
             display: flex;
@@ -16,6 +25,10 @@
             justify-content: center;
             padding: 60px 32px;
             margin-top: var(--header-height);
+            width: 100%;
+            max-width: 100vw;
+            overflow-x: hidden;
+            box-sizing: border-box;
         }
 
         .contact-content {
@@ -145,20 +158,36 @@
         }
 
         @media (max-width: 768px) {
+
+            /* Android-specific fixes */
+            html,
+            body {
+                width: 100%;
+                max-width: 100%;
+                overflow-x: hidden;
+                -webkit-text-size-adjust: 100%;
+                text-size-adjust: 100%;
+            }
+
             .contact-page-wrapper {
                 padding: 20px 16px;
                 min-height: auto;
+                width: 100%;
+                max-width: 100%;
             }
 
             .contact-content {
                 padding: 32px 20px;
                 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
                 border-radius: 16px;
+                width: 100%;
+                max-width: 100%;
             }
 
             .contact-grid {
                 grid-template-columns: 1fr;
                 gap: 40px;
+                width: 100%;
             }
 
             .contact-info h2 {
