--- a/contato.html
+++ b/contato.html
@@ -10,266 +10,263 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Reset for Android */
-        html,
+        /* ==========================================
+           FLUID RESPONSIVE CSS - No Fixed Dimensions
+           Works on all Android and iOS devices
+           ========================================== */
+
+        /* Base Reset */
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        html {
+            font-size: 100%;
+            /* 16px base */
+            -webkit-text-size-adjust: 100%;
+            text-size-adjust: 100%;
+        }
+
         body {
             width: 100%;
             max-width: 100vw;
             overflow-x: hidden;
+            min-height: 100vh;
+            min-height: 100dvh;
+            /* Dynamic viewport for mobile */
         }
 
+        /* ==========================================
+           Contact Page Wrapper - Fluid Container
+           ========================================== */
         .contact-page-wrapper {
-            min-height: calc(100vh - var(--header-height));
+            width: 100%;
+            min-height: calc(100vh - 4rem);
+            min-height: calc(100dvh - 4rem);
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 60px 32px;
-            margin-top: var(--header-height);
-            width: 100%;
-            max-width: 100vw;
-            overflow-x: hidden;
-            box-sizing: border-box;
+            padding: clamp(1rem, 4vw, 4rem) clamp(1rem, 3vw, 2rem);
+            margin-top: var(--header-height, 4rem);
         }
 
+        /* ==========================================
+           Contact Content Box - Fluid Width
+           ========================================== */
         .contact-content {
-            max-width: 1000px;
             width: 100%;
+            max-width: min(62.5rem, 95vw);
+            /* 1000px max, 95vw on small screens */
             margin: 0 auto;
-            padding: 60px 50px;
+            padding: clamp(1.5rem, 5vw, 3.75rem) clamp(1.25rem, 4vw, 3.125rem);
             background: var(--color-bg);
-            border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
+            border-radius: clamp(0.75rem, 2vw, 1.25rem);
+            box-shadow: 0 0.625rem 2.5rem rgba(0, 0, 0, 0.08);
         }
 
+        /* ==========================================
+           Contact Grid - Responsive Columns
+           ========================================== */
         .contact-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 80px;
+            grid-template-columns: repeat(auto-fit, minmax(min(100%, 18rem), 1fr));
+            gap: clamp(2rem, 6vw, 5rem);
             align-items: start;
+            width: 100%;
         }
 
+        /* ==========================================
+           Contact Info Section
+           ========================================== */
         .contact-info h2 {
-            font-size: 28px;
+            font-size: clamp(1.375rem, 4vw, 1.75rem);
             font-weight: 700;
-            margin-bottom: 24px;
+            margin-bottom: clamp(1rem, 3vw, 1.5rem);
+            line-height: 1.2;
+            word-wrap: break-word;
         }
 
-        .contact-info p {
-            font-size: 16px;
+        .contact-info>p {
+            font-size: clamp(0.875rem, 2.5vw, 1rem);
             color: var(--color-text-secondary);
-            margin-bottom: 32px;
+            margin-bottom: clamp(1.5rem, 4vw, 2rem);
             line-height: 1.7;
+            word-wrap: break-word;
         }
 
+        /* ==========================================
+           Contact Items - Touch Friendly
+           ========================================== */
         .contact-item {
             display: flex;
             align-items: center;
-            gap: 16px;
-            margin-bottom: 20px;
-            padding: 16px;
+            gap: clamp(0.75rem, 2vw, 1rem);
+            margin-bottom: clamp(0.75rem, 2vw, 1.25rem);
+            padding: clamp(0.875rem, 2.5vw, 1rem);
             background: var(--color-bg-alt);
-            border-radius: 12px;
+            border-radius: clamp(0.5rem, 1.5vw, 0.75rem);
             text-decoration: none;
             color: inherit;
             transition: all 0.3s ease;
             border: 1px solid transparent;
+            width: 100%;
+            min-height: 3rem;
+            /* Touch target minimum */
         }
 
-        .contact-link:hover {
+        .contact-link:hover,
+        .contact-link:focus {
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.08) 0%, rgba(118, 75, 162, 0.08) 100%);
             border-color: rgba(102, 126, 234, 0.3);
-            transform: translateX(8px);
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.15);
+            transform: translateX(0.5rem);
+            box-shadow: 0 0.25rem 0.9375rem rgba(102, 126, 234, 0.15);
+        }
+
+        .contact-link:active {
+            transform: scale(0.98);
+        }
+
+        .contact-item-icon {
+            font-size: clamp(1.25rem, 3.5vw, 1.5rem);
+            flex-shrink: 0;
+            transition: transform 0.3s ease;
         }
 
         .contact-link:hover .contact-item-icon {
             transform: scale(1.2);
         }
 
-        .contact-item-icon {
-            font-size: 24px;
-            transition: transform 0.3s ease;
+        .contact-item-text {
+            flex: 1;
+            min-width: 0;
+            /* Allow text truncation */
         }
 
         .contact-item-text h4 {
-            font-size: 14px;
+            font-size: clamp(0.8125rem, 2vw, 0.875rem);
             font-weight: 600;
-            margin-bottom: 4px;
+            margin-bottom: 0.25rem;
+            word-wrap: break-word;
         }
 
         .contact-item-text p {
-            font-size: 14px;
+            font-size: clamp(0.75rem, 2vw, 0.875rem);
             color: var(--color-text-secondary);
             margin: 0;
+            word-wrap: break-word;
+            overflow-wrap: anywhere;
         }
 
         .contact-link:hover .contact-item-text h4 {
             color: #667eea;
         }
 
+        /* ==========================================
+           Contact Form - Fluid Inputs
+           ========================================== */
         .contact-form h3 {
-            font-size: 20px;
+            font-size: clamp(1.125rem, 3vw, 1.25rem);
             font-weight: 600;
-            margin-bottom: 24px;
+            margin-bottom: clamp(1rem, 3vw, 1.5rem);
         }
 
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: clamp(1rem, 3vw, 1.25rem);
+            width: 100%;
         }
 
         .form-group label {
             display: block;
-            font-size: 12px;
+            font-size: clamp(0.6875rem, 1.8vw, 0.75rem);
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.1em;
-            margin-bottom: 8px;
+            margin-bottom: 0.5rem;
             color: var(--color-text-secondary);
         }
 
         .form-group input,
         .form-group textarea {
             width: 100%;
-            padding: 14px;
+            padding: clamp(0.75rem, 2.5vw, 0.875rem);
             border: 1px solid var(--color-border);
             background: var(--color-bg);
             color: var(--color-text);
             font-family: inherit;
-            font-size: 14px;
+            font-size: 1rem;
+            /* 16px - prevents zoom on iOS */
+            border-radius: clamp(0.375rem, 1vw, 0.5rem);
+            transition: border-color 0.2s ease;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: var(--color-accent);
         }
 
         .form-group textarea {
-            min-height: 120px;
+            min-height: clamp(6rem, 15vw, 7.5rem);
             resize: vertical;
         }
 
         .form-submit {
-            padding: 14px 32px;
+            width: 100%;
+            padding: clamp(0.875rem, 3vw, 1rem) clamp(1.5rem, 4vw, 2rem);
             background: var(--color-accent);
             color: #fff;
             border: none;
+            font-size: clamp(0.875rem, 2.5vw, 1rem);
             font-weight: 500;
             cursor: pointer;
-            transition: 0.2s;
+            transition: all 0.2s ease;
+            border-radius: clamp(0.375rem, 1vw, 0.5rem);
+            min-height: 3rem;
+            /* Touch target */
         }
 
         .form-submit:hover {
-            background: #8a0729;
+            background: var(--color-accent-dark, #6b5a45);
         }
 
-        @media (max-width: 768px) {
+        .form-submit:active {
+            transform: scale(0.98);
+        }
 
-            /* Android-specific fixes */
-            html,
-            body {
-                width: 100%;
-                max-width: 100%;
-                overflow-x: hidden;
-                -webkit-text-size-adjust: 100%;
-                text-size-adjust: 100%;
-            }
+        /* ==========================================
+           Mobile Adjustments - Fine Tuning
+           ========================================== */
+        @media (max-width: 48em) {
 
+            /* 768px */
             .contact-page-wrapper {
-                padding: 20px 16px;
+                padding: clamp(0.75rem, 3vw, 1.25rem);
+                margin-top: 3.5rem;
                 min-height: auto;
-                width: 100%;
-                max-width: 100%;
+                align-items: flex-start;
+                padding-top: 1.5rem;
             }
 
-            .contact-content {
-                padding: 32px 20px;
-                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06);
-                border-radius: 16px;
-                width: 100%;
-                max-width: 100%;
-            }
-
-            .contact-grid {
-                grid-template-columns: 1fr;
-                gap: 40px;
-                width: 100%;
-            }
-
-            .contact-info h2 {
-                font-size: 24px;
-                text-align: center;
-                margin-bottom: 16px;
-            }
-
-            .contact-info p {
-                font-size: 14px;
-                text-align: center;
-                margin-bottom: 24px;
-            }
-
-            .contact-item {
-                padding: 14px;
-                margin-bottom: 12px;
-            }
-
-            .contact-item-icon {
-                font-size: 22px;
-            }
-
-            .contact-item-text h4 {
-                font-size: 13px;
-            }
-
-            .contact-item-text p {
-                font-size: 13px;
-            }
-
+            .contact-info h2,
             .contact-form h3 {
-                font-size: 18px;
                 text-align: center;
-                margin-bottom: 20px;
             }
 
-            .form-group {
-                margin-bottom: 16px;
-            }
-
-            .form-group label {
-                font-size: 11px;
-            }
-
-            .form-group input,
-            .form-group textarea {
-                padding: 12px;
-                font-size: 16px;
-                /* Prevents zoom on iOS */
-                border-radius: 8px;
-            }
-
-            .form-group textarea {
-                min-height: 100px;
-            }
-
-            .form-submit {
-                width: 100%;
-                padding: 16px;
-                font-size: 15px;
-                border-radius: 8px;
+            .contact-info>p {
+                text-align: center;
             }
         }
 
-        /* Extra small devices */
-        @media (max-width: 400px) {
+        /* Extra small screens */
+        @media (max-width: 22.5em) {
+
+            /* 360px */
             .contact-content {
-                padding: 24px 16px;
-            }
-
-            .contact-info h2 {
-                font-size: 22px;
-            }
-
-            .contact-item {
-                padding: 12px;
-                gap: 12px;
-            }
-
-            .contact-item-icon {
-                font-size: 20px;
+                padding: 1rem 0.875rem;
             }
         }
     </style>
