--- a/portfolio.html
+++ b/portfolio.html
@@ -103,26 +103,41 @@
         }
 
         .portfolio-item.video::before {
-            content: '▶';
+            content: '';
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 60px;
-            height: 60px;
-            background: rgba(255, 255, 255, 0.9);
+            width: 70px;
+            height: 70px;
+            background: rgba(255, 0, 0, 0.9);
             border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            color: #333;
             z-index: 3;
-            transition: transform 0.3s ease;
+            transition: transform 0.3s ease, background 0.3s ease;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .portfolio-item.video::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-40%, -50%);
+            width: 0;
+            height: 0;
+            border-left: 22px solid white;
+            border-top: 14px solid transparent;
+            border-bottom: 14px solid transparent;
+            z-index: 4;
         }
 
         .portfolio-item.video:hover::before {
-            transform: translate(-50%, -50%) scale(1.1);
+            transform: translate(-50%, -50%) scale(1.15);
+            background: rgba(255, 0, 0, 1);
+        }
+
+        .portfolio-item.video:active::before {
+            transform: translate(-50%, -50%) scale(0.95);
         }
 
         /* Admin Edit Badge for Portfolio */
@@ -465,7 +480,7 @@
     </div>
 
     <style>
-        /* Video Player Modal */
+        /* Video Player Modal - Mobile Optimized */
         .video-player-modal {
             position: fixed;
             inset: 0;
@@ -473,6 +488,7 @@
             display: none;
             align-items: center;
             justify-content: center;
+            padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
         }
 
         .video-player-modal.active {
@@ -482,35 +498,40 @@
         .video-player-overlay {
             position: absolute;
             inset: 0;
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0, 0, 0, 0.95);
+            -webkit-tap-highlight-color: transparent;
         }
 
         .video-player-content {
             position: relative;
-            width: 90%;
+            width: 95%;
             max-width: 900px;
             z-index: 1;
         }
 
         .video-player-close {
             position: absolute;
-            top: -40px;
+            top: -50px;
             right: 0;
-            width: 36px;
-            height: 36px;
+            width: 44px;
+            height: 44px;
+            min-width: 44px;
+            min-height: 44px;
             background: rgba(255, 255, 255, 0.2);
             border: none;
             border-radius: 50%;
             color: #fff;
-            font-size: 24px;
+            font-size: 28px;
             cursor: pointer;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: background 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
         }
 
-        .video-player-close:hover {
+        .video-player-close:hover,
+        .video-player-close:active {
             background: rgba(255, 255, 255, 0.4);
         }
 
@@ -531,6 +552,41 @@
             width: 100%;
             height: 100%;
             border: none;
+        }
+
+        /* Mobile adjustments for video modal */
+        @media (max-width: 768px) {
+            .video-player-content {
+                width: 100%;
+                padding: 0 8px;
+            }
+
+            .video-player-close {
+                top: -48px;
+                right: 8px;
+            }
+
+            .video-player-wrapper {
+                border-radius: 4px;
+            }
+        }
+
+        /* Landscape mode on mobile */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .video-player-content {
+                width: 80%;
+                max-width: none;
+            }
+
+            .video-player-wrapper {
+                padding-bottom: 45%;
+                /* Slightly taller in landscape */
+            }
+
+            .video-player-close {
+                top: 8px;
+                right: -50px;
+            }
         }
     </style>
 
@@ -633,10 +689,20 @@
             const isAdmin = sessionStorage.getItem('isAdminMode') === 'true';
             const t = getCurrentTranslations(); // Use global function from translations.js
 
-            let html = portfolioItems.map((item, index) => `
-                <article class="portfolio-item ${item.type === 'video' ? 'video' : ''}" onclick="handleItemClick(${index})">
-                    ${item.image ? `<img src="${item.image}" alt="${item.title}" class="portfolio-item-media">` :
-                    '<div class="portfolio-item-placeholder">📷</div>'}
+            let html = portfolioItems.map((item, index) => {
+                // For video items, get YouTube thumbnail if videoUrl exists
+                let thumbnailUrl = item.image;
+                if (item.type === 'video' && item.videoUrl) {
+                    const videoId = getYouTubeId(item.videoUrl);
+                    if (videoId) {
+                        thumbnailUrl = `https://img.youtube.com/vi/${videoId}/hqdefault.jpg`;
+                    }
+                }
+
+                return `
+                <article class="portfolio-item ${item.type === 'video' ? 'video' : ''}" onclick="handleItemClick(${index})" data-video-url="${item.videoUrl || ''}">
+                    ${thumbnailUrl ? `<img src="${thumbnailUrl}" alt="${item.title}" class="portfolio-item-media" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">` : ''}
+                    <div class="portfolio-item-placeholder" style="${thumbnailUrl ? 'display:none' : ''}">📷</div>
                     <div class="portfolio-item-overlay"></div>
                     <div class="portfolio-item-content">
                         <h3 class="portfolio-item-title">${item.title}</h3>
@@ -644,7 +710,7 @@
                     </div>
                     <div class="portfolio-edit-badge" onclick="event.stopPropagation(); openEditModal(${index})">EDITAR</div>
                 </article>
-            `).join('');
+            `}).join('');
 
             // Add "Add New" button for admin
             html += `
